# playground

./: .bazelignore  .bazelrc  .envrc  .gitignore  Earthfile  MODULE.bazel  README.md  buildbuddy.yaml  flake.nix
.bazel/: workspace_status.sh
.bazel/bazelrc/: buildbuddy.bazelrc  nix.bazelrc
.bazel/nix/: nixpkgs.nix
.devcontainer/: devcontainer.json
.earthly/base-images/debian/: Earthfile
.earthly/base-images/rust/: Earthfile
.earthly/builders/debian-builder/: Earthfile
.earthly/builders/rust-builder/: Earthfile
.earthly/utilities/nix/: Earthfile
.earthly/utilities/rust-builder/: Earthfile
.github/workflows/: cron_workflows.yml  pr_updated_workflows.yml  push_to_main_workflows.yml  validate_pr_title.yaml
machines/: machines.nix
machines/common/: common.nix
machines/common/builders/: builders.nix
machines/common/networking/: tailscale.nix
machines/common/users/: users.nix
machines/common/utils/: docker.nix
machines/hosts/desktops/inwin-tower/: configuration.nix
machines/hosts/desktops/nixos-thinkpad/: configuration.nix
machines/hosts/inwin-tower/: configuration.nix  devices.nix
machines/hosts/nixos-thinkpad/: configuration.nix
machines/hosts/servers/nixos-rpi3/: configuration.nix  devices.nix  hardware-configuration.nix  install.sh
machines/hosts/servers/nixos-rpi4-1/: configuration.nix
machines/hosts/servers/nixos-rpi4-2/: configuration.nix
machines/hosts/servers/nixos-rpi4-3/: configuration.nix  devices.nix  hardware-configuration.nix
machines/hosts/servers/syno-vm/: configuration.nix  devices.nix  install.sh
machines/hosts/utils/nixos-bootstrap/: configuration.nix
machines/modules/bootstrap/: bootstrap.nix  build_consumer.nix
machines/modules/bootstrap/builders/: build_consumer.nix  build_user.nix  builders.nix
machines/modules/common/: common.nix
machines/modules/common/bootloader/: bootloader.nix
machines/modules/common/builders/: build_server.nix
machines/modules/common/desktop/: desktop.nix
machines/modules/common/networking/: firewall.nix  networking.nix
machines/modules/common/pi_mods/: pi3.nix  pi4.nix  pi_mods.nix
machines/modules/common/users/: users.nix
machines/modules/common/utils/: auto-upgrade.nix  docker.nix  utils.nix  zfs-services.nix
machines/modules/core/: core.nix  tailscale.nix
machines/modules/desktop/: desktop.nix
machines/modules/hardware/: pi3.nix  pi4.nix
machines/modules/hardware/raspberry-pi/: pi4.nix  pi_common.nix
machines/modules/install/: install.nix
machines/modules/install/bootloader/: bootloader.nix
machines/modules/install/networking/: networking.nix
projects/: Earthfile  pnpm-lock.yaml  pnpm-workspace.yaml  projects.nix
projects/pocket-cellar/: Earthfile
projects/pocket-cellar/private-api/: Cargo.toml  Earthfile  deny.toml  wrangler.toml
projects/pocket-cellar/private-api/src/: lib.rs
projects/pocket-cellar/public-api/: Cargo.toml  Earthfile  bacon.toml  wrangler.toml
projects/pocket-cellar/public-api/src/: lib.rs
projects/pocket-cellar/site/: .gitignore  BUILD  Earthfile  biome.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts  wrangler.toml
projects/pocket-cellar/site/.storybook/: BUILD
projects/pocket-cellar/site/e2e/: BUILD
projects/pocket-cellar/site/messages/: BUILD
projects/pocket-cellar/site/project.inlang/: BUILD  project_id
projects/pocket-cellar/site/src/: BUILD  hooks.server.ts  worker-configuration.d.ts
projects/pocket-cellar/site/src/routes/demo/paraglide/: +page.svelte
projects/pocket-cellar/site/static/: BUILD
projects/rust/fullstack-rustapp-template/: .env.example  .envrc  .gitignore  Cargo.toml  README.md  bacon.toml  deny.toml  docker-compose.yml  flake.nix  fly.toml  justfile  rust-toolchain.toml  workspace.nix
projects/rust/fullstack-rustapp-template/.cargo/: audit.toml
projects/rust/fullstack-rustapp-template/.config/: hakari.toml  taplo.toml
projects/rust/fullstack-rustapp-template/.github/workflows/: pr_closed_workflows.yml  pr_updated_workflows.yml  push_to_main_workflows.yml
secrets/: github_pat.age  mod.nix  secrets.nix  tailscale_key.age
secrets/keys/: github_pat.age  nix_store_signing_key.age  tailscale_key.age
