bazel_dep(name = "aspect_rules_js", version = "2.1.2")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "6.3.0")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.17.0")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//projects:pnpm-lock.yaml",
    npmrc = "//projects:.npmrc",
    verify_node_modules_ignored = "//:.bazelignore",
    generate_bzl_library_targets = True,
    # lifecycle_hooks = { "*": [] }
)

use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir $(pwd) install
use_repo(pnpm, "pnpm")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
