[workspace]
members = [
  "packages/bins/*",
  "packages/libs/*",
  "packages/my-workspace-hack",
  "packages/tests/*",
]
metadata.crane.name = "..."
resolver = "2"

[workspace.package]
authors = ["Taylor Hanken <tghanken@gmail.com>"]
edition = "2021"
publish = false
version = "0.1.0"

[workspace.dependencies]
askama = { version = "0.12.1", default-features = false }
askama_axum = { version = "0.4.0", default-features = false }
axum = { version = "0.7.5", default-features = false }
axum-extra = { version = "0.9.6", default-features = false }
mimalloc = { version = "0.1.43", default-features = false }
proptest = { version = "1.5.0", default-features = false }
sentry = { version = "0.34.0", default-features = false }
sentry-tower = { version = "0.34.0", default-features = false }
serde = { version = "1.0.208", default-features = false }
serde_json = { version = "1.0.127", default-features = false }
snafu = { version = "0.8.4", default-features = false }
tokio = { version = "1.39.1", default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5.2", default-features = false }
tower-livereload = { version = "0.9.3", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }

# Currently unused (but likely to be used)
# anyhow = { version = "1.0.86", default-features = false }
# axum-htmx = { version = "0.6.0", default-features = false }
# axum-login = { version = "0.15.3", default-features = false }
# chrono = { version = "0.4.38", default-features = false }
# claims = { version = "0.7.1", default-features = false }
# config = { version = "0.14.0", default-features = false }
# derive_more = { version = "1.0.0", default-features = false }
# fake = { version = "2.9.2", default-features = false }
# fred = { version = "9.0.3", default-features = false }
# minify-html = { version = "0.15.0", default-features = false }
# reqwest = { version = "0.12.5", default-features = false }
# sqlx = { version = "0.8.0", default-features = false }
# static_assertions = { version = "1.1.0", default-features = false }
# tower-helmet = { version = "0.3.0", default-features = false }
# tower-layer = { version = "0.3.3", default-features = false }
# tower-sessions = { version = "0.12.2", default-features = false }
# uuid = { version = "1.10.0", default-features = false }
# wiremock = { version = "0.6.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"

[profile.dev.package.askama_derive]
opt-level = 3
